add MD5 in vigenere chiper

--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
     <script src="js/key/key_generator.js"></script>
     <script src="js/encode/sengkalan.js"></script>
     <script src="js/hash/sha1.js"></script>
+    <script src="js/hash/md5.js"></script>
     <script src="js/encode/lzw.js"></script>
     <script src="js/enkripsi/vigenere.js"></script>
     <script src="js/stego/steganography.js"></script>
