--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
     <script src="js/hash/sha1.js"></script>
     <script src="js/hash/md5.js"></script>
     <script src="js/encode/lzw.js"></script>
+    <script src="js/enkripsi/caesar.js"></script>
     <script src="js/enkripsi/vigenere.js"></script>
     <script src="js/stego/steganography.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pako/2.1.0/pako.js"></script>
